--- a/portfolio.html
+++ b/portfolio.html
@@ -4,47 +4,203 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Studio</a>
+    <header class="page-header">
+      <nav class="page-header-nav">
+        <a href="./index.html" class="page-logo link"
+          ><span class="page-logo-colored">Web</span>Studio</a
+        >
+        <ul class="page-header-list list">
+          <li class="page-header-item">
+            <a href="./index.html" class="page-header-link link">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="page-header-item">
+            <a href="" class="page-header-link link">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="page-header-item">
+            <a href="" class="page-header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="page-header-contacts">
+        <ul class="page-header-contacts-list list">
+          <li class="page-header-contact-item">
+            <a href="mailto:info@devstudio.com" class="page-header-contact link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="page-header-contact-item">
+            <a href="tel:+110001111111" class="page-header-contact link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <!-- FILTERS -->
-      <section>
-        <ul>
-          <li><button type="button"></button></li>
-          <li><button type="button"></button></li>
-          <li><button type="button"></button></li>
-          <li><button type="button"></button></li>
-          <li><button type="button"></button></li>
+      <!-- PROJECTS -->
+      <section class="filter">
+        <!-- FILTERS -->
+        <h1 hidden class="filter-title"></h1>
+        <nav>
+          <ul class="filter-list list">
+            <li class="filter-item">
+              <button class="filter-btn" type="button">All</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-btn" type="button">Web Site</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-btn" type="button">App</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-btn" type="button">Design</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-btn" type="button">Marketing</button>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="projects-list list">
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/bank-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Banking App Interface Concept</h2>
+              <p class="projects-tag">App</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Cashless Payment</h2>
+              <p class="projects-tag">Marketing</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Meditation App</h2>
+              <p class="projects-tag">App</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Taxi Service</h2>
+              <p class="projects-tag">Marketing</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/screen-illustrator.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Screen Illustrations</h2>
+              <p class="projects-tag">Design</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Online Courses</h2>
+              <p class="projects-tag">Marketing</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/instagram-stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Instagram Stories Concept</h2>
+              <p class="projects-tag">Design</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/oganic-food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Organic Food</h2>
+              <p class="projects-tag">Web Site/p></p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/fresh-coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Fresh Coffee</h2>
+              <p class="projects-tag">Web Site</p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
+
+    <footer class="footer">
+      <a class="page-logo footer-logo link" href="./index.html"
+        ><span class="page-logo-colored">Web</span>Studio</a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing &amp; growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
