--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header class="page-header">
       <nav class="page-header-nav">
         <a href="./index.html" class="page-logo link"
-          ><span class="page-logo-colored">Web</span>Studio</a
+          >Web<span class="page-logo-colored">Studio</span></a
         >
         <ul class="page-header-list list">
           <li class="page-header-item">
-            <a href="" class="page-header-link link">Studio</a>
+            <a href="./index.html" class="page-header-link link">Studio</a>
           </li>
           <li class="page-header-item">
             <a href="./portfolio.html" class="page-header-link link"
@@ -58,7 +58,7 @@
 
       <!-- BENEFITS -->
       <section class="benefits">
-        <h2 hidden>Our Benefits</h2>
+        <h2 class="section-title" hidden>Our Benefits</h2>
         <ul class="benefits-list list">
           <li class="benefits-item">
             <h3 class="benefits-title">Strategy</h3>
@@ -178,7 +178,7 @@
 
     <footer class="footer">
       <a class="page-logo footer-logo link" href="./index.html"
-        ><span class="page-logo-colored">Web</span>Studio</a
+        >Web<span class="page-logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
