--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,16 @@
     <header class="page-header">
       <nav class="page-header-nav">
         <a href="./index.html" class="page-logo link"
-          ><span class="page-logo-colored">Web</span>Studio</a
+          >Web<span class="page-logo-colored">Studio</span></a
         >
         <ul class="page-header-list list">
           <li class="page-header-item">
             <a href="./index.html" class="page-header-link link">Studio</a>
           </li>
           <li class="page-header-item">
-            <a href="" class="page-header-link link">Portfolio</a>
+            <a href="./portfolio.html" class="page-header-link link"
+              >Portfolio</a
+            >
           </li>
           <li class="page-header-item">
             <a href="" class="page-header-link link">Contacts</a>
@@ -52,25 +54,23 @@
       <section class="filter">
         <!-- FILTERS -->
         <h1 hidden class="filter-title"></h1>
-        <nav>
-          <ul class="filter-list list">
+        <ul class="filter-list list">
             <li class="filter-item">
-              <button class="filter-btn" type="button">All</button>
+                <button class="filter-btn" type="button">All</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Web Site</button>
+                <button class="filter-btn" type="button">Web Site</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">App</button>
+                <button class="filter-btn" type="button">App</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Design</button>
+                <button class="filter-btn" type="button">Design</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Marketing</button>
+                <button class="filter-btn" type="button">Marketing</button>
             </li>
-          </ul>
-        </nav>
+        </ul>          
 
         <ul class="projects-list list">
           <li class="projects-item">
@@ -173,7 +173,7 @@
                 height="300"
               />
               <h2 class="projects-title">Organic Food</h2>
-              <p class="projects-tag">Web Site/p></p>
+              <p class="projects-tag">Web Site</p>
             </a>
           </li>
 
@@ -195,12 +195,13 @@
 
     <footer class="footer">
       <a class="page-logo footer-logo link" href="./index.html"
-        ><span class="page-logo-colored">Web</span>Studio</a
+        >Web<span class="page-logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
+    </footer>
     </footer>
   </body>
 </html>
