--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
       <!-- PROJECTS -->
       <section class="filter">
         <!-- FILTERS -->
-        <h1 hidden class="filter-title"></h1>
+        <h1 hidden class="filter-title">Filter</h1>
         <ul class="filter-list list">
             <li class="filter-item">
                 <button class="filter-btn" type="button">All</button>
