--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <a href="./index.html" class="page-header-link link">Studio</a>
           </li>
           <li class="page-header-item">
-            <a href="./portfolio.html" class="page-header-link link"
-              >Portfolio</a
-            >
+            <a href="" class="page-header-link link">Portfolio</a>
           </li>
           <li class="page-header-item">
             <a href="" class="page-header-link link">Contacts</a>
