--- a/index.html
+++ b/index.html
@@ -138,6 +138,89 @@
           </li>
         </ul>
       </section>
+
+      <!-- OUR TEAM -->
+      <section class="projects">
+        <ul class="projects-list list">
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/bank-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Banking App Interface Concept</h2>
+              <p class="projects-tag">App</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Cashless Payment</h2>
+              <p class="projects-tag">Marketing</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Meditation App</h2>
+              <p class="projects-tag">App</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Taxi Service</h2>
+              <p class="projects-tag">Marketing</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/screen-illustrator.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Screen Illustrations</h2>
+              <p class="projects-tag">Design</p>
+            </a>
+          </li>
+
+          <li class="projects-item">
+            <a class="projects-link link" href=""
+              ><img
+                src="./images/pojects/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="projects-title">Online Courses</h2>
+              <p class="projects-tag">Marketing</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
