added title for projects section

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
         </ul>
       </section>
 
-      <!-- OUR TEAM -->
+      <!-- Our Portfolio -->
       <section class="projects">
+        <h2 class="projects-title section-title">Our Portfolio</h2>
         <ul class="projects-list list">
           <li class="projects-item">
             <a class="projects-link link" href=""
