corrected projects section title

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <!-- Our Portfolio -->
       <section class="projects">
-        <h2 class="projects-title section-title">Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
         <ul class="projects-list list">
           <li class="projects-item">
             <img
